force-app/main/default/objects/RequestTask__c/RequestTask__c.object-meta.xml
<CustomObject>
    <label>依頼タスク</label>
    <nameField>
        <label>依頼タスク件名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>