force-app/main/default/objects/RequestTask__c/fields/Applicant__c.field-meta.xml
<CustomField>
    <fullName>Applicant__c</fullName>
    <label>申請者</label>
    <length>18</length>
    <type>Text</type>
</CustomField>