force-app/main/default/objects/RequestTask__c/fields/ApplicantEmail__c.field-meta.xml
<CustomField>
    <fullName>ApplicantEmail__c</fullName>
    <label>申請者のメールアドレス</label>
    <type>Email</type>
</CustomField>