force-app/main/default/objects/RequestTask__c/fields/ApplicantRole__c.field-meta.xml
<CustomField>
    <fullName>ApplicantRole__c</fullName>
    <label>承認申請者：所属略称（ディビジョン）役職</label>
    <length>80</length>
    <type>Text</type>
</CustomField>