force-app/main/default/objects/RequestTask__c/fields/ApplicationDatetime__c.field-meta.xml
<CustomField>
    <fullName>ApplicationDatetime__c</fullName>
    <label>承認申請年月日</label>
    <type>DateTime</type>
</CustomField>