force-app/main/default/objects/RequestTask__c/fields/ApplicationHistory__c.field-meta.xml
<CustomField>
    <fullName>ApplicationHistory__c</fullName>
    <formula>IF(ISNULL(ApplicationDatetime__c),&quot;&quot;,
LEFT(TEXT(ApplicationDatetime__c + (9/24)), 4) &amp; &quot;/&quot;
&amp;MID(TEXT(ApplicationDatetime__c + (9/24)), 6, 2) &amp; &quot;/&quot;
&amp;MID(TEXT(ApplicationDatetime__c + (9/24)), 9, 2) &amp; &quot; &quot;
&amp;MID(TEXT(ApplicationDatetime__c + (9/24)), 12, 2) &amp; &quot;:&quot;
&amp;MID(TEXT(ApplicationDatetime__c + (9/24)), 15, 2) &amp; &quot;:&quot;
&amp;MID(TEXT(ApplicationDatetime__c + (9/24)), 18, 2)
&amp;IF(ISBLANK(ApplicantRole__c), &quot;&quot;, &quot; &quot; &amp; ApplicantRole__c))</formula>
    <label>承認申請履歴</label>
    <type>Text</type>
</CustomField>