force-app/main/default/objects/RequestTask__c/fields/ApprovalDatetime1__c.field-meta.xml
<CustomField>
    <fullName>ApprovalDatetime1__c</fullName>
    <label>自部門承認年月日1</label>
    <type>DateTime</type>
</CustomField>