force-app/main/default/objects/RequestTask__c/fields/ApprovalDatetime2__c.field-meta.xml
<CustomField>
    <fullName>ApprovalDatetime2__c</fullName>
    <label>自部門承認年月日2</label>
    <type>DateTime</type>
</CustomField>