force-app/main/default/objects/RequestTask__c/fields/ApprovalDatetime3__c.field-meta.xml
<CustomField>
    <fullName>ApprovalDatetime3__c</fullName>
    <label>自部門承認年月日3</label>
    <type>DateTime</type>
</CustomField>