force-app/main/default/objects/RequestTask__c/fields/ApprovalHistory1__c.field-meta.xml
<CustomField>
    <fullName>ApprovalHistory1__c</fullName>
    <formula>IF(ISNULL(ApprovalDatetime1__c),&quot;&quot;,
LEFT(TEXT(ApprovalDatetime1__c + (9/24)), 4) &amp; &quot;/&quot;
&amp;MID(TEXT(ApprovalDatetime1__c + (9/24)), 6, 2) &amp; &quot;/&quot;
&amp;MID(TEXT(ApprovalDatetime1__c + (9/24)), 9, 2) &amp; &quot; &quot;
&amp;MID(TEXT(ApprovalDatetime1__c + (9/24)), 12, 2) &amp; &quot;:&quot;
&amp;MID(TEXT(ApprovalDatetime1__c + (9/24)), 15, 2) &amp; &quot;:&quot;
&amp;MID(TEXT(ApprovalDatetime1__c + (9/24)), 18, 2)
&amp;IF(ISBLANK(ApproverRole1__c), &quot;&quot;, &quot; &quot; &amp; ApproverRole1__c))</formula>
    <label>自部門承認履歴1</label>
    <type>Text</type>
</CustomField>