force-app/main/default/objects/RequestTask__c/fields/ApprovalHistory2__c.field-meta.xml
<CustomField>
    <fullName>ApprovalHistory2__c</fullName>
    <formula>IF(ISNULL(ApprovalDatetime2__c),&quot;&quot;,
LEFT(TEXT(ApprovalDatetime2__c + (9/24)), 4) &amp; &quot;/&quot;
&amp;MID(TEXT(ApprovalDatetime2__c + (9/24)), 6, 2) &amp; &quot;/&quot;
&amp;MID(TEXT(ApprovalDatetime2__c + (9/24)), 9, 2) &amp; &quot; &quot;
&amp;MID(TEXT(ApprovalDatetime2__c + (9/24)), 12, 2) &amp; &quot;:&quot;
&amp;MID(TEXT(ApprovalDatetime2__c + (9/24)), 15, 2) &amp; &quot;:&quot;
&amp;MID(TEXT(ApprovalDatetime2__c + (9/24)), 18, 2)
&amp;IF(ISBLANK(ApproverRole2__c), &quot;&quot;, &quot; &quot; &amp; ApproverRole2__c))</formula>
    <label>自部門承認履歴2</label>
    <type>Text</type>
</CustomField>