force-app/main/default/objects/RequestTask__c/fields/ApprovalHistory3__c.field-meta.xml
<CustomField>
    <fullName>ApprovalHistory3__c</fullName>
    <formula>IF(ISNULL(ApprovalDatetime3__c),&quot;&quot;,
LEFT(TEXT(ApprovalDatetime3__c + (9/24)), 4) &amp; &quot;/&quot;
&amp;MID(TEXT(ApprovalDatetime3__c + (9/24)), 6, 2) &amp; &quot;/&quot;
&amp;MID(TEXT(ApprovalDatetime3__c + (9/24)), 9, 2) &amp; &quot; &quot;
&amp;MID(TEXT(ApprovalDatetime3__c + (9/24)), 12, 2) &amp; &quot;:&quot;
&amp;MID(TEXT(ApprovalDatetime3__c + (9/24)), 15, 2) &amp; &quot;:&quot;
&amp;MID(TEXT(ApprovalDatetime3__c + (9/24)), 18, 2)
&amp;IF(ISBLANK(ApproverRole3__c), &quot;&quot;, &quot; &quot; &amp; ApproverRole3__c))</formula>
    <label>自部門承認履歴3</label>
    <type>Text</type>
</CustomField>