force-app/main/default/objects/RequestTask__c/fields/ApprovalPattern__c.field-meta.xml
<CustomField>
    <fullName>ApprovalPattern__c</fullName>
    <label>承認パターン</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>承認者自動設定</fullName>
            </value>
            <value>
                <fullName>承認者手動設定</fullName>
                <default>true</default>
                <label>承認者手動設定</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>