force-app/main/default/objects/RequestTask__c/fields/Approver1__c.field-meta.xml
<CustomField>
    <fullName>Approver1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>申請者と同じ課のユーザーを指定します</inlineHelpText>
    <label>自部門承認者1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RequestTasks6</relationshipName>
    <type>Lookup</type>
</CustomField>