force-app/main/default/objects/RequestTask__c/fields/Approver2__c.field-meta.xml
<CustomField>
    <fullName>Approver2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>自部門承認者2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RequestTasks7</relationshipName>
    <type>Lookup</type>
</CustomField>