force-app/main/default/objects/RequestTask__c/fields/Approver3__c.field-meta.xml
<CustomField>
    <fullName>Approver3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>自部門承認者3</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RequestTasks8</relationshipName>
    <type>Lookup</type>
</CustomField>