force-app/main/default/objects/RequestTask__c/fields/ApproverDivision1__c.field-meta.xml
<CustomField>
    <fullName>ApproverDivision1__c</fullName>
    <formula>Approver1__r.Division</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>承認者1の所属</label>
    <type>Text</type>
</CustomField>