force-app/main/default/objects/RequestTask__c/fields/ApproverDivision2__c.field-meta.xml
<CustomField>
    <fullName>ApproverDivision2__c</fullName>
    <formula>Approver2__r.Division</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>承認者2の所属</label>
    <type>Text</type>
</CustomField>