force-app/main/default/objects/RequestTask__c/fields/ApproverDivision3__c.field-meta.xml
<CustomField>
    <fullName>ApproverDivision3__c</fullName>
    <formula>Approver3__r.Division</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>承認者3の所属</label>
    <type>Text</type>
</CustomField>