force-app/main/default/objects/RequestTask__c/fields/ApproverRole2__c.field-meta.xml
<CustomField>
    <fullName>ApproverRole2__c</fullName>
    <label>自部門承認者2：所属略称（ディビジョン）役職</label>
    <length>80</length>
    <type>Text</type>
</CustomField>