force-app/main/default/objects/RequestTask__c/fields/ApproverRole3__c.field-meta.xml
<CustomField>
    <fullName>ApproverRole3__c</fullName>
    <label>自部門承認者3：所属略称（ディビジョン）役職</label>
    <length>80</length>
    <type>Text</type>
</CustomField>