force-app/main/default/objects/RequestTask__c/fields/CheckboxCurrent__c.field-meta.xml
<CustomField>
    <fullName>CheckboxCurrent__c</fullName>
    <formula>CurrentApprover__c =  $User.Id</formula>
    <label>現在の承認者(チェックボックス)</label>
    <type>Checkbox</type>
</CustomField>