force-app/main/default/objects/RequestTask__c/fields/CompanyAddress03__c.field-meta.xml
<CustomField>
    <fullName>CompanyAddress03__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>社内送信先3</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>CompanyAddress__c.IsActive__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>CompanyAddress__c</referenceTo>
    <relationshipLabel>依頼タスク (社内送信先3)</relationshipLabel>
    <relationshipName>CompanyAddress_RequestTasks3</relationshipName>
    <type>Lookup</type>
</CustomField>