force-app/main/default/objects/RequestTask__c/fields/CompletionComment__c.field-meta.xml
<CustomField>
    <fullName>CompletionComment__c</fullName>
    <label>完了コメント</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>