force-app/main/default/objects/RequestTask__c/fields/Current__c.field-meta.xml
<CustomField>
    <fullName>Current__c</fullName>
    <label>現在</label>
    <length>40</length>
    <type>Text</type>
</CustomField>