force-app/main/default/objects/RequestTask__c/fields/CurrentApp__c.field-meta.xml
<CustomField>
    <fullName>CurrentApp__c</fullName>
    <formula>Current__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>現在の承認</label>
    <type>Text</type>
</CustomField>