force-app/main/default/objects/RequestTask__c/fields/CurrentApprover__c.field-meta.xml
<CustomField>
    <fullName>CurrentApprover__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>承認申請が現在割り当てられているユーザを表示</description>
    <label>現在の承認者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RequestTaskUser</relationshipName>
    <type>Lookup</type>
</CustomField>