force-app/main/default/objects/RequestTask__c/fields/DiscloseExceptRequestDestination__c.field-meta.xml
<CustomField>
    <fullName>DiscloseExceptRequestDestination__c</fullName>
    <inlineHelpText>開示不可の場合、依頼先のみに開示されます。
開示可の場合、全ユーザに開示されます。</inlineHelpText>
    <label>依頼先以外への開示</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>開示不可</fullName>
            </value>
            <value>
                <fullName>開示可</fullName>
                <default>true</default>
                <label>開示可</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>