force-app/main/default/objects/RequestTask__c/fields/DocumentOutputFlag__c.field-meta.xml
<CustomField>
    <fullName>DocumentOutputFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>帳票出力済みフラグ</label>
    <type>Checkbox</type>
</CustomField>