force-app/main/default/objects/RequestTask__c/fields/DueDate__c.field-meta.xml
<CustomField>
    <fullName>DueDate__c</fullName>
    <label>希望回答期限</label>
    <required>true</required>
    <type>Date</type>
</CustomField>