force-app/main/default/objects/RequestTask__c/fields/Factory__c.field-meta.xml
<CustomField>
    <fullName>Factory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>場所別</label>
    <referenceTo>Factory__c</referenceTo>
    <relationshipLabel>依頼タスク</relationshipLabel>
    <relationshipName>OpportunityTasks</relationshipName>
    <type>Lookup</type>
</CustomField>