force-app/main/default/objects/RequestTask__c/fields/FactoryDivision__c.field-meta.xml
<CustomField>
    <fullName>FactoryDivision__c</fullName>
    <label>製作所 対象部門</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>RequestTo__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>製作所（営業）</fullName>
            </value>
            <value>
                <fullName>製作所（SE）</fullName>
            </value>
            <value>
                <fullName>製作所（製造）</fullName>
            </value>
            <value>
                <fullName>選択なし</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>