force-app/main/default/objects/RequestTask__c/fields/FactoryQuotationNo__c.field-meta.xml
<CustomField>
    <fullName>FactoryQuotationNo__c</fullName>
    <label>製作所見積番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>