force-app/main/default/objects/RequestTask__c/fields/IsApprovalProcessTarget__c.field-meta.xml
<CustomField>
    <fullName>IsApprovalProcessTarget__c</fullName>
    <formula>OR(
				IsProposalCreatingOrderTarget__c
				,IsQuotationInquiryTarget__c
				,IsPhotoShootTarget__c
				, IsCarryInRequestTarget__c 
				, IsTechniqueRequestTarget__c 
				, IsFactoryEngineerSelectionRequeTarget__c 
				, IsCostReductionRequestTarget__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>承認プロセス対象</label>
    <type>Checkbox</type>
</CustomField>