force-app/main/default/objects/RequestTask__c/fields/IsCostReductionRequestTarget__c.field-meta.xml
<CustomField>
    <fullName>IsCostReductionRequestTarget__c</fullName>
    <formula>AND (
  ISPICKVAL(TaskCategory__c , &quot;原低依頼&quot;),
  OR (
    ISPICKVAL(RequestTo__c, &quot;神電公共営&quot;),
    ISPICKVAL(RequestTo__c, &quot;神電社会営&quot;),
    ISPICKVAL(RequestTo__c, &quot;長電施設営&quot;),
    ISPICKVAL(RequestTo__c, &quot;配電社会営&quot;),
    ISPICKVAL(RequestTo__c, &quot;配電スマ営&quot;),
    ISPICKVAL(RequestTo__c, &quot;本プラ・都公建&quot;),
    ISPICKVAL(RequestTo__c, &quot;本プラ・広公建&quot;),
    ISPICKVAL(RequestTo__c, &quot;本プラ・施設建&quot;),
    ISPICKVAL(RequestTo__c, &quot;本プラ・東北建&quot;),
    ISPICKVAL(RequestTo__c, &quot;北支・プラ建・建設&quot;),
    ISPICKVAL(RequestTo__c, &quot;中部支・プラ建・建設&quot;),
    ISPICKVAL(RequestTo__c, &quot;西支・プラ建・建設一&quot;),
    ISPICKVAL(RequestTo__c, &quot;西支・プラ建・建設二&quot;),
    ISPICKVAL(RequestTo__c, &quot;九支・プラ建・建設課&quot;)
     )
)</formula>
    <label>対象製作所_原低依頼</label>
    <type>Checkbox</type>
</CustomField>