force-app/main/default/objects/RequestTask__c/fields/IsFactoryEngineerSelectionRequeTarget__c.field-meta.xml
<CustomField>
    <fullName>IsFactoryEngineerSelectionRequeTarget__c</fullName>
    <formula>AND (
  ISPICKVAL(TaskCategory__c , &quot;製作所技術者選定依頼&quot;),
  OR (
    ISPICKVAL(RequestTo__c, &quot;神電公共営&quot;),
    ISPICKVAL(RequestTo__c, &quot;神電社会営&quot;),
    ISPICKVAL(RequestTo__c, &quot;配電社会営&quot;),
    ISPICKVAL(RequestTo__c, &quot;配電スマ営&quot;)
  )
)</formula>
    <label>対象製作所_製作所技術者選定依頼</label>
    <type>Checkbox</type>
</CustomField>