force-app/main/default/objects/RequestTask__c/fields/IsProposalCreatingOrderTarget__c.field-meta.xml
<CustomField>
    <fullName>IsProposalCreatingOrderTarget__c</fullName>
    <formula>AND (
     ISPICKVAL(TaskCategory__c , &quot;提案書作成依頼&quot;),
     OR (
         ISPICKVAL(RequestTo__c, &quot;神電公共営・本駐神電社シ一一計&quot;),
         ISPICKVAL(RequestTo__c, &quot;神電公共営・神電社シ一二計&quot;),
         ISPICKVAL(RequestTo__c, &quot;神電施設エンジ&quot;),
         ISPICKVAL(RequestTo__c, &quot;配電東配計&quot;),
         ISPICKVAL(RequestTo__c, &quot;配電西配計&quot;),
         ISPICKVAL(RequestTo__c, &quot;長電施電シ&quot;),
         ISPICKVAL(RequestTo__c, &quot;長電映シ&quot;)
     )
)</formula>
    <label>対象製作所_提案書作成依頼</label>
    <type>Checkbox</type>
</CustomField>