force-app/main/default/objects/RequestTask__c/fields/IssueCategory__c.field-meta.xml
<CustomField>
    <fullName>IssueCategory__c</fullName>
    <label>発行区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>新規</fullName>
            </value>
            <value>
                <fullName>変更</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>