force-app/main/default/objects/RequestTask__c/fields/IsTechniqueRequestTarget__c.field-meta.xml
<CustomField>
    <fullName>IsTechniqueRequestTarget__c</fullName>
    <formula>AND (
  ISPICKVAL(TaskCategory__c , &quot;技派依頼&quot;),
  OR (
    ISPICKVAL(RequestTo__c, &quot;神電公共営&quot;),
    ISPICKVAL(RequestTo__c, &quot;神電社会営&quot;),
    ISPICKVAL(RequestTo__c, &quot;配電社会営&quot;),
    ISPICKVAL(RequestTo__c, &quot;長電施設営&quot;),
    ISPICKVAL(RequestTo__c, &quot;配電スマ営&quot;)
  )
)</formula>
    <label>対象製作所_技派依頼</label>
    <type>Checkbox</type>
</CustomField>