force-app/main/default/objects/RequestTask__c/fields/KOJI_JOHO_NO__c.field-meta.xml
<CustomField>
    <fullName>KOJI_JOHO_NO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>依頼タスクに関連する工事情報への参照項目。案件-依頼タスク-工事情報のレポート作成を目的として追加。</description>
    <label>【新規】工事情報番号</label>
    <referenceTo>ConstructionInfo__c</referenceTo>
    <relationshipLabel>依頼タスク</relationshipLabel>
    <relationshipName>IraiTaskList</relationshipName>
    <type>Lookup</type>
</CustomField>