force-app/main/default/objects/RequestTask__c/fields/ManualCheck1__c.field-meta.xml
<CustomField>
    <fullName>ManualCheck1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>手動承認判定1</label>
    <type>Checkbox</type>
</CustomField>