force-app/main/default/objects/RequestTask__c/fields/ManualCheck2__c.field-meta.xml
<CustomField>
    <fullName>ManualCheck2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>手動承認判定2</label>
    <type>Checkbox</type>
</CustomField>