force-app/main/default/objects/RequestTask__c/fields/ManualCheck3__c.field-meta.xml
<CustomField>
    <fullName>ManualCheck3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>手動承認判定3</label>
    <type>Checkbox</type>
</CustomField>