force-app/main/default/objects/RequestTask__c/fields/MentionTarget10__c.field-meta.xml
<CustomField>
    <fullName>MentionTarget10__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CC10</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RequestTasksMentionTarget10</relationshipName>
    <type>Lookup</type>
</CustomField>