force-app/main/default/objects/RequestTask__c/fields/MentionTarget1__c.field-meta.xml
<CustomField>
    <fullName>MentionTarget1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CC1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RequestTasks1</relationshipName>
    <type>Lookup</type>
</CustomField>