force-app/main/default/objects/RequestTask__c/fields/MentionTarget2__c.field-meta.xml
<CustomField>
    <fullName>MentionTarget2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CC2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RequestTasks2</relationshipName>
    <type>Lookup</type>
</CustomField>