force-app/main/default/objects/RequestTask__c/fields/OpportunityName__c.field-meta.xml
<CustomField>
    <fullName>OpportunityName__c</fullName>
    <description>依頼タスクに案件が紐づく場合は、「案件名」案件が紐付かない場合は空白。</description>
    <formula>IF( !ISBLANK(Opportunity__c ), Opportunity__r.Name ,&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>案件名（数式）</label>
    <type>Text</type>
</CustomField>