force-app/main/default/objects/RequestTask__c/fields/ProductSpecification__c.field-meta.xml
<CustomField>
    <fullName>ProductSpecification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>機器仕様</label>
    <referenceTo>ProductSpecification__c</referenceTo>
    <relationshipLabel>依頼タスク</relationshipLabel>
    <relationshipName>OpportunityTasks2</relationshipName>
    <type>Lookup</type>
</CustomField>