force-app/main/default/objects/RequestTask__c/fields/Recipient1__c.field-meta.xml
<CustomField>
    <fullName>Recipient1__c</fullName>
    <label>メール送信先1</label>
    <type>Email</type>
</CustomField>