force-app/main/default/objects/RequestTask__c/fields/Recipient2__c.field-meta.xml
<CustomField>
    <fullName>Recipient2__c</fullName>
    <label>メール送信先2</label>
    <type>Email</type>
</CustomField>