force-app/main/default/objects/RequestTask__c/fields/Recipient3__c.field-meta.xml
<CustomField>
    <fullName>Recipient3__c</fullName>
    <label>メール送信先3</label>
    <type>Email</type>
</CustomField>