force-app/main/default/objects/RequestTask__c/fields/RequestApprovalDatetime1__c.field-meta.xml
<CustomField>
    <fullName>RequestApprovalDatetime1__c</fullName>
    <label>依頼先承認年月日1</label>
    <type>DateTime</type>
</CustomField>