force-app/main/default/objects/RequestTask__c/fields/RequestApprovalDatetime2__c.field-meta.xml
<CustomField>
    <fullName>RequestApprovalDatetime2__c</fullName>
    <label>依頼先承認年月日2</label>
    <type>DateTime</type>
</CustomField>