force-app/main/default/objects/RequestTask__c/fields/RequestApprovalDatetime3__c.field-meta.xml
<CustomField>
    <fullName>RequestApprovalDatetime3__c</fullName>
    <label>依頼先承認年月日3</label>
    <type>DateTime</type>
</CustomField>