force-app/main/default/objects/RequestTask__c/fields/RequestApprovalHistory1__c.field-meta.xml
<CustomField>
    <fullName>RequestApprovalHistory1__c</fullName>
    <formula>IF(ISNULL(RequestApprovalDatetime1__c),&quot;&quot;,
LEFT(TEXT(RequestApprovalDatetime1__c + (9/24)), 4) &amp; &quot;/&quot;
&amp;MID(TEXT(RequestApprovalDatetime1__c + (9/24)), 6, 2) &amp; &quot;/&quot;
&amp;MID(TEXT(RequestApprovalDatetime1__c + (9/24)), 9, 2) &amp; &quot; &quot;
&amp;MID(TEXT(RequestApprovalDatetime1__c + (9/24)), 12, 2) &amp; &quot;:&quot;
&amp;MID(TEXT(RequestApprovalDatetime1__c + (9/24)), 15, 2) &amp; &quot;:&quot;
&amp;MID(TEXT(RequestApprovalDatetime1__c + (9/24)), 18, 2)
&amp;IF(ISBLANK(RequestApproverRole1__c), &quot;&quot;, &quot; &quot; &amp; RequestApproverRole1__c))</formula>
    <label>依頼先承認履歴1</label>
    <type>Text</type>
</CustomField>