force-app/main/default/objects/RequestTask__c/fields/RequestApprovalHistory2__c.field-meta.xml
<CustomField>
    <fullName>RequestApprovalHistory2__c</fullName>
    <formula>IF(ISNULL(RequestApprovalDatetime2__c),&quot;&quot;,
LEFT(TEXT(RequestApprovalDatetime2__c + (9/24)), 4) &amp; &quot;/&quot;
&amp;MID(TEXT(RequestApprovalDatetime2__c + (9/24)), 6, 2) &amp; &quot;/&quot;
&amp;MID(TEXT(RequestApprovalDatetime2__c + (9/24)), 9, 2) &amp; &quot; &quot;
&amp;MID(TEXT(RequestApprovalDatetime2__c + (9/24)), 12, 2) &amp; &quot;:&quot;
&amp;MID(TEXT(RequestApprovalDatetime2__c + (9/24)), 15, 2) &amp; &quot;:&quot;
&amp;MID(TEXT(RequestApprovalDatetime2__c + (9/24)), 18, 2)
&amp;IF(ISBLANK(RequestApproverRole2__c), &quot;&quot;, &quot; &quot; &amp; RequestApproverRole2__c))</formula>
    <label>依頼先承認履歴2</label>
    <type>Text</type>
</CustomField>