force-app/main/default/objects/RequestTask__c/fields/RequestApprovalHistory3__c.field-meta.xml
<CustomField>
    <fullName>RequestApprovalHistory3__c</fullName>
    <formula>IF(ISNULL(RequestApprovalDatetime3__c),&quot;&quot;,
LEFT(TEXT(RequestApprovalDatetime3__c + (9/24)), 4) &amp; &quot;/&quot;
&amp;MID(TEXT(RequestApprovalDatetime3__c + (9/24)), 6, 2) &amp; &quot;/&quot;
&amp;MID(TEXT(RequestApprovalDatetime3__c + (9/24)), 9, 2) &amp; &quot; &quot;
&amp;MID(TEXT(RequestApprovalDatetime3__c + (9/24)), 12, 2) &amp; &quot;:&quot;
&amp;MID(TEXT(RequestApprovalDatetime3__c + (9/24)), 15, 2) &amp; &quot;:&quot;
&amp;MID(TEXT(RequestApprovalDatetime3__c + (9/24)), 18, 2)
&amp;IF(ISBLANK(RequestApproverRole3__c), &quot;&quot;, &quot; &quot; &amp; RequestApproverRole3__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>依頼先承認履歴3</label>
    <type>Text</type>
</CustomField>