force-app/main/default/objects/RequestTask__c/fields/RequestApprover1__c.field-meta.xml
<CustomField>
    <fullName>RequestApprover1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>依頼先承認者1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RequestTasks101</relationshipName>
    <type>Lookup</type>
</CustomField>