force-app/main/default/objects/RequestTask__c/fields/RequestApprover2__c.field-meta.xml
<CustomField>
    <fullName>RequestApprover2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>依頼先承認者2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RequestTasks102</relationshipName>
    <type>Lookup</type>
</CustomField>