force-app/main/default/objects/RequestTask__c/fields/RequestApprover3__c.field-meta.xml
<CustomField>
    <fullName>RequestApprover3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>依頼先承認者3</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RequestTasks103</relationshipName>
    <type>Lookup</type>
</CustomField>