force-app/main/default/objects/RequestTask__c/fields/RequestApproverRole1__c.field-meta.xml
<CustomField>
    <fullName>RequestApproverRole1__c</fullName>
    <label>依頼先承認者1：所属略称（ディビジョン）役職</label>
    <length>80</length>
    <type>Text</type>
</CustomField>