force-app/main/default/objects/RequestTask__c/fields/RequestApproverRole2__c.field-meta.xml
<CustomField>
    <fullName>RequestApproverRole2__c</fullName>
    <label>依頼先承認者2：所属略称（ディビジョン）役職</label>
    <length>80</length>
    <type>Text</type>
</CustomField>