force-app/main/default/objects/RequestTask__c/fields/RequestApproverRole3__c.field-meta.xml
<CustomField>
    <fullName>RequestApproverRole3__c</fullName>
    <label>依頼先承認者3：所属略称（ディビジョン）役職</label>
    <length>80</length>
    <type>Text</type>
</CustomField>