force-app/main/default/objects/RequestTask__c/fields/RequestCc12__c.field-meta.xml
<CustomField>
    <fullName>RequestCc12__c</fullName>
    <label>開示場所1CCグループ2</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>RequestDestinationCc__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>SBUGroup</valueSetName>
    </valueSet>
</CustomField>