force-app/main/default/objects/RequestTask__c/fields/RequestCc22__c.field-meta.xml
<CustomField>
    <fullName>RequestCc22__c</fullName>
    <label>開示場所2CCグループ2</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>RequestDestinationCc2__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>SBUGroup</valueSetName>
    </valueSet>
</CustomField>